# curlpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  build-mac-release.toml  update_cmake-macro.sh  vendor-mac.sh  vendor-mac.toml
cmake-macro/: FindCustomCURL.cmake  FindCustomLibrary.cmake  FindCustomNghttp2.cmake  FindCustomOpenSSL.cmake  TargetPrintInfo.cmake
extras/: CMakeLists.txt  curlpp-config.cmake  curlpp.pc.in
include/curlpp/: Easy.hpp  EasyPool.h  Multi.hpp  Options.hpp  Types.hpp  cURLpp.hpp
include/curlpp/adapters/: Libuv.h  libuv.h
include/curlpp/internal/: CurlHandle.hpp  OptionSetter.hpp
src/curlpp/: Easy.cpp  Multi.cpp
src/curlpp/internal/: CurlHandle.cpp  OptionSetter.cpp
